--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -33,11 +33,13 @@ img {
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 0;
+  top: 16%;
+  /* top: 0; */
   left: 0;
   width: 100vw;
-  height: 100vh;
-  background-color: #333;
+  height: 84%;
+  /* height: 100vh; */
+  background-color: #fff;
   z-index: 999;
 }
 
@@ -45,6 +47,7 @@ img {
   width: 40px;
   height: 40px;
   margin-right: 10px;
+  margin-bottom: 10rem;
 }
 .cube:nth-child(1) {
   background-color: #8cc271;
