--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,14 +1,10 @@
-body {
-  margin: 0;
-  box-sizing: border-box;
-}
-
-img {
-  width: 100%;
-}
-
+@import url(https://fonts.googleapis.com/css?family=Caveat|Raleway&display=swap);
 .logo {
   width: 10%;
+}
+
+.muse-single-img {
+  width: 40%;
 }
 
 .muses-grid {
@@ -33,12 +29,10 @@ img {
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 16%;
-  /* top: 0; */
+  top: 0;
   left: 0;
   width: 100vw;
-  height: 84%;
-  /* height: 100vh; */
+  height: 100vh;
   background-color: #fff;
   z-index: 999;
 }
@@ -47,7 +41,6 @@ img {
   width: 40px;
   height: 40px;
   margin-right: 10px;
-  margin-bottom: 10rem;
 }
 .cube:nth-child(1) {
   background-color: #8cc271;
@@ -83,6 +76,25 @@ img {
   50% {
     transform: translateX(0px);
   }
+}
+body {
+  margin: 0;
+  box-sizing: border-box;
+  font-family: var(--sans-serif);
+}
+
+img {
+  width: 100%;
+}
+
+h1, a {
+  font-family: var(--serif);
+}
+
+:root {
+  --sans-serif: "Raleway", sans-serif;
+  --serif: "Caveat";
+  --primary-color: #af0000;
 }
 
 /*# sourceMappingURL=main.css.map */
