--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Caveat|Raleway&display=swap);
+@import url(https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css);
 .logo {
   width: 10%;
 }
