--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,7 +1,18 @@
 @import url(https://fonts.googleapis.com/css?family=Caveat|Raleway&display=swap);
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css);
-.logo {
-  width: 10%;
+.nav-bar .logo {
+  width: 26%;
+}
+.nav-bar a {
+  text-decoration: none;
+  font-size: 1.8rem;
+  color: var(--black);
+}
+.nav-bar a:hover {
+  color: var(--primary-color);
+}
+.nav-bar a.router-link-active {
+  color: var(--primary-color);
 }
 
 .muse-single-img {
@@ -42,6 +53,7 @@
   width: 40px;
   height: 40px;
   margin-right: 10px;
+  opacity: 0.2;
 }
 .cube:nth-child(1) {
   background-color: #8cc271;
@@ -84,6 +96,10 @@ body {
   font-family: var(--sans-serif);
 }
 
+header {
+  height: 5rem;
+}
+
 img {
   width: 100%;
 }
@@ -96,6 +112,8 @@ h1, a {
   --sans-serif: "Raleway", sans-serif;
   --serif: "Caveat";
   --primary-color: #af0000;
+  --black: #000;
+  --white: #fff;
 }
 
 /*# sourceMappingURL=main.css.map */
