--- a/src/styles/scss/components/_pageLoader.scss
+++ b/src/styles/scss/components/_pageLoader.scss
@@ -18,7 +18,7 @@ $colors: #8cc271, #69beeb, #f5aa39, #e9643b;
     width: 40px;
     height: 40px;
     margin-right: 10px;
-    // margin-bottom: 10rem;
+    opacity: .2;
 
     @for $i from 1 through length($colors){
         &:nth-child(#{$i}){
