--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,11 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Caveat|Raleway&display=swap);
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css);
-.nav-bar .logo {
-  width: 26%;
+.nav-bar .a-logo {
+  width: 5rem;
+  margin-inline: 4rem;
 }
 .nav-bar a {
   text-decoration: none;
-  font-size: 1.8rem;
+  font-size: 2.3rem;
   color: var(--black);
 }
 .nav-bar a:hover {
