--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,5 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Caveat|Raleway&display=swap);
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css);
+.nav-bar {
+  width: 100%;
+}
 .nav-bar .a-logo {
   width: 5rem;
   margin-inline: 4rem;
@@ -22,6 +25,11 @@
   height: 2rem;
   background-repeat: no-repeat;
   background-image: url("@/assets/burger-icon.svg");
+}
+
+.muses-page-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .muse-single-img {
@@ -106,7 +114,22 @@ body {
 }
 
 header {
-  height: 5rem;
+  height: var(--header-height);
+  box-shadow: var(--box-shadow);
+  border-bottom: 2px solid var(--primary-color);
+}
+
+footer {
+  background-color: var(--primary-color);
+  color: var(--white);
+  height: var(--header-height);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.page-wrap {
+  min-height: var(--main-height);
 }
 
 img {
@@ -117,12 +140,24 @@ h1, a {
   font-family: var(--serif);
 }
 
+a.artworks {
+  color: var(--primary-color);
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+a.artworks:hover {
+  color: var(--black);
+}
+
 :root {
   --sans-serif: "Raleway", sans-serif;
   --serif: "Caveat";
   --primary-color: #af0000;
   --black: #000;
   --white: #fff;
+  --box-shadow: 0px 12px 14px -10px rgb(220 218 218 / 75%);
+  --header-height: 10vh;
+  --main-height: 80vh ;
 }
 
 /*# sourceMappingURL=main.css.map */
