--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -1,4 +1,5 @@
 @import './components/navBar';
+@import './components/musesPage';
 @import './components/museSingle';
 @import './components/paintingsList';
 @import './components/pageLoader';
