--- a/src/styles/scss/partials/_variables.scss
+++ b/src/styles/scss/partials/_variables.scss
@@ -6,4 +6,9 @@
     --primary-color: #af0000;
     --black: #000;
     --white: #fff;
+    
+    --box-shadow: 0px 12px 14px -10px rgb(220 218 218 / 75%);
+
+    --header-height: 10vh;
+    --main-height: 80vh
 }
