--- a/src/styles/scss/components/_pageLoader.scss
+++ b/src/styles/scss/components/_pageLoader.scss
@@ -6,7 +6,8 @@ $colors: #8cc271, #69beeb, #f5aa39, #e9643b;
     justify-content: center;
     align-items: center;
     position: fixed;
-    top: 0; 
+    // top: 0; 
+    top: var(--header-height);
     left: 0;
     width: 100vw;
     height: 100vh;
@@ -19,6 +20,7 @@ $colors: #8cc271, #69beeb, #f5aa39, #e9643b;
     height: 40px;
     margin-right: 10px;
     opacity: .2;
+    margin-bottom: 10rem;
 
     @for $i from 1 through length($colors){
         &:nth-child(#{$i}){
