--- a/src/styles/scss/components/_museSingle.scss
+++ b/src/styles/scss/components/_museSingle.scss
@@ -1,4 +1,30 @@
 // MuseSingle
+
+.muse-single-img-lg{
+    height: 34rem;
+    object-fit: cover;
+}
+
 .muse-single-img-sm{
     cursor: pointer;
+    height: 8rem;
+    // width: 6rem;
+    object-fit: cover;
+}
+
+.picture-name{
+    font-family: var(--serif);
+    font-size: 1.5rem;
+    text-align: center;
+    padding-top: 1rem;
+}
+
+.link-wiki{
+    color: var(--primary-color);
+    text-decoration: none;
+    font-size: 1.5rem;
+
+    &:hover{
+        color: var(--black);
+    }
 }
